--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # URL
-io.b2w.starwars.path = https://planetsapib2w.herokuapp.com/
+io.b2w.starwars.path = https://planetsapib2w.herokuapp.com
 io.b2w.starwars.endpoint.planet = /api/planets/
 
 # Spring Data Configuration
